target/generated-sources/antlr4/JANTParser.cpp

#include "../../../wci/intermediate/TypeSpec.h"
using namespace wci::intermediate;


// Generated from JANT.g4 by ANTLR 4.7.2


#include "JANTVisitor.h"

#include "JANTParser.h"


using namespace antlrcpp;
using namespace antlr4;

JANTParser::JANTParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

JANTParser::~JANTParser() {
  delete _interpreter;
}

std::string JANTParser::getGrammarFileName() const {
  return "JANT.g4";
}

const std::vector<std::string>& JANTParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& JANTParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- ProgramContext ------------------------------------------------------------------

JANTParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* JANTParser::ProgramContext::START() {
  return getToken(JANTParser::START, 0);
}

JANTParser::HeaderContext* JANTParser::ProgramContext::header() {
  return getRuleContext<JANTParser::HeaderContext>(0);
}

JANTParser::MainContext* JANTParser::ProgramContext::main() {
  return getRuleContext<JANTParser::MainContext>(0);
}

tree::TerminalNode* JANTParser::ProgramContext::TERMINATE() {
  return getToken(JANTParser::TERMINATE, 0);
}

JANTParser::Func_listContext* JANTParser::ProgramContext::func_list() {
  return getRuleContext<JANTParser::Func_listContext>(0);
}


size_t JANTParser::ProgramContext::getRuleIndex() const {
  return JANTParser::RuleProgram;
}


antlrcpp::Any JANTParser::ProgramContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<JANTVisitor*>(visitor))
    return parserVisitor->visitProgram(this);
  else
    return visitor->visitChildren(this);
}

JANTParser::ProgramContext* JANTParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, JANTParser::RuleProgram);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(62);
    match(JANTParser::START);
    setState(63);
    header();
    setState(66);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case JANTParser::MAIN: {
        break;
      }

      case JANTParser::FUNC: {
        setState(65);
        func_list();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
    setState(68);
    main();
    setState(69);
    match(JANTParser::TERMINATE);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- HeaderContext ------------------------------------------------------------------

JANTParser::HeaderContext::HeaderContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* JANTParser::HeaderContext::IDENTIFIER() {
  return getToken(JANTParser::IDENTIFIER, 0);
}


size_t JANTParser::HeaderContext::getRuleIndex() const {
  return JANTParser::RuleHeader;
}


antlrcpp::Any JANTParser::HeaderContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<JANTVisitor*>(visitor))
    return parserVisitor->visitHeader(this);
  else
    return visitor->visitChildren(this);
}

JANTParser::HeaderContext* JANTParser::header() {
  HeaderContext *_localctx = _tracker.createInstance<HeaderContext>(_ctx, getState());
  enterRule(_localctx, 2, JANTParser::RuleHeader);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(71);
    match(JANTParser::IDENTIFIER);
    setState(72);
    match(JANTParser::T__0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Func_listContext ------------------------------------------------------------------

JANTParser::Func_listContext::Func_listContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<JANTParser::FuncContext *> JANTParser::Func_listContext::func() {
  return getRuleContexts<JANTParser::FuncContext>();
}

JANTParser::FuncContext* JANTParser::Func_listContext::func(size_t i) {
  return getRuleContext<JANTParser::FuncContext>(i);
}


size_t JANTParser::Func_listContext::getRuleIndex() const {
  return JANTParser::RuleFunc_list;
}


antlrcpp::Any JANTParser::Func_listContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<JANTVisitor*>(visitor))
    return parserVisitor->visitFunc_list(this);
  else
    return visitor->visitChildren(this);
}

JANTParser::Func_listContext* JANTParser::func_list() {
  Func_listContext *_localctx = _tracker.createInstance<Func_listContext>(_ctx, getState());
  enterRule(_localctx, 4, JANTParser::RuleFunc_list);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(74);
    func();
    setState(78);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == JANTParser::FUNC) {
      setState(75);
      func();
      setState(80);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FuncContext ------------------------------------------------------------------

JANTParser::FuncContext::FuncContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* JANTParser::FuncContext::FUNC() {
  return getToken(JANTParser::FUNC, 0);
}

JANTParser::Func_nameContext* JANTParser::FuncContext::func_name() {
  return getRuleContext<JANTParser::Func_nameContext>(0);
}

JANTParser::Param_listContext* JANTParser::FuncContext::param_list() {
  return getRuleContext<JANTParser::Param_listContext>(0);
}

JANTParser::Compound_stmtContext* JANTParser::FuncContext::compound_stmt() {
  return getRuleContext<JANTParser::Compound_stmtContext>(0);
}


size_t JANTParser::FuncContext::getRuleIndex() const {
  return JANTParser::RuleFunc;
}


antlrcpp::Any JANTParser::FuncContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<JANTVisitor*>(visitor))
    return parserVisitor->visitFunc(this);
  else
    return visitor->visitChildren(this);
}

JANTParser::FuncContext* JANTParser::func() {
  FuncContext *_localctx = _tracker.createInstance<FuncContext>(_ctx, getState());
  enterRule(_localctx, 6, JANTParser::RuleFunc);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(81);
    match(JANTParser::FUNC);
    setState(82);
    func_name();
    setState(83);
    match(JANTParser::T__1);
    setState(84);
    param_list();
    setState(85);
    match(JANTParser::T__2);
    setState(86);
    compound_stmt();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Func_nameContext ------------------------------------------------------------------

JANTParser::Func_nameContext::Func_nameContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* JANTParser::Func_nameContext::IDENTIFIER() {
  return getToken(JANTParser::IDENTIFIER, 0);
}


size_t JANTParser::Func_nameContext::getRuleIndex() const {
  return JANTParser::RuleFunc_name;
}


antlrcpp::Any JANTParser::Func_nameContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<JANTVisitor*>(visitor))
    return parserVisitor->visitFunc_name(this);
  else
    return visitor->visitChildren(this);
}

JANTParser::Func_nameContext* JANTParser::func_name() {
  Func_nameContext *_localctx = _tracker.createInstance<Func_nameContext>(_ctx, getState());
  enterRule(_localctx, 8, JANTParser::RuleFunc_name);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(88);
    match(JANTParser::IDENTIFIER);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Param_listContext ------------------------------------------------------------------

JANTParser::Param_listContext::Param_listContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<JANTParser::ParamContext *> JANTParser::Param_listContext::param() {
  return getRuleContexts<JANTParser::ParamContext>();
}

JANTParser::ParamContext* JANTParser::Param_listContext::param(size_t i) {
  return getRuleContext<JANTParser::ParamContext>(i);
}


size_t JANTParser::Param_listContext::getRuleIndex() const {
  return JANTParser::RuleParam_list;
}


antlrcpp::Any JANTParser::Param_listContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<JANTVisitor*>(visitor))
    return parserVisitor->visitParam_list(this);
  else
    return visitor->visitChildren(this);
}

JANTParser::Param_listContext* JANTParser::param_list() {
  Param_listContext *_localctx = _tracker.createInstance<Param_listContext>(_ctx, getState());
  enterRule(_localctx, 10, JANTParser::RuleParam_list);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(90);
    param();
    setState(95);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == JANTParser::T__3) {
      setState(91);
      match(JANTParser::T__3);
      setState(92);
      param();
      setState(97);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ParamContext ------------------------------------------------------------------

JANTParser::ParamContext::ParamContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

JANTParser::VariableContext* JANTParser::ParamContext::variable() {
  return getRuleContext<JANTParser::VariableContext>(0);
}

JANTParser::Type_idContext* JANTParser::ParamContext::type_id() {
  return getRuleContext<JANTParser::Type_idContext>(0);
}


size_t JANTParser::ParamContext::getRuleIndex() const {
  return JANTParser::RuleParam;
}


antlrcpp::Any JANTParser::ParamContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<JANTVisitor*>(visitor))
    return parserVisitor->visitParam(this);
  else
    return visitor->visitChildren(this);
}

JANTParser::ParamContext* JANTParser::param() {
  ParamContext *_localctx = _tracker.createInstance<ParamContext>(_ctx, getState());
  enterRule(_localctx, 12, JANTParser::RuleParam);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(100);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case JANTParser::IDENTIFIER: {
        break;
      }

      case JANTParser::T__4: {
        setState(99);
        match(JANTParser::T__4);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
    setState(102);
    variable();
    setState(103);
    match(JANTParser::T__5);
    setState(104);
    type_id();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- MainContext ------------------------------------------------------------------

JANTParser::MainContext::MainContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* JANTParser::MainContext::MAIN() {
  return getToken(JANTParser::MAIN, 0);
}

JANTParser::Compound_stmtContext* JANTParser::MainContext::compound_stmt() {
  return getRuleContext<JANTParser::Compound_stmtContext>(0);
}


size_t JANTParser::MainContext::getRuleIndex() const {
  return JANTParser::RuleMain;
}


antlrcpp::Any JANTParser::MainContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<JANTVisitor*>(visitor))
    return parserVisitor->visitMain(this);
  else
    return visitor->visitChildren(this);
}

JANTParser::MainContext* JANTParser::main() {
  MainContext *_localctx = _tracker.createInstance<MainContext>(_ctx, getState());
  enterRule(_localctx, 14, JANTParser::RuleMain);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(106);
    match(JANTParser::MAIN);
    setState(107);
    compound_stmt();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DeclarationsContext ------------------------------------------------------------------

JANTParser::DeclarationsContext::DeclarationsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

JANTParser::Type_idContext* JANTParser::DeclarationsContext::type_id() {
  return getRuleContext<JANTParser::Type_idContext>(0);
}

JANTParser::Var_listContext* JANTParser::DeclarationsContext::var_list() {
  return getRuleContext<JANTParser::Var_listContext>(0);
}


size_t JANTParser::DeclarationsContext::getRuleIndex() const {
  return JANTParser::RuleDeclarations;
}


antlrcpp::Any JANTParser::DeclarationsContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<JANTVisitor*>(visitor))
    return parserVisitor->visitDeclarations(this);
  else
    return visitor->visitChildren(this);
}

JANTParser::DeclarationsContext* JANTParser::declarations() {
  DeclarationsContext *_localctx = _tracker.createInstance<DeclarationsContext>(_ctx, getState());
  enterRule(_localctx, 16, JANTParser::RuleDeclarations);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(109);
    type_id();
    setState(110);
    var_list();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Var_listContext ------------------------------------------------------------------

JANTParser::Var_listContext::Var_listContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<JANTParser::Var_idContext *> JANTParser::Var_listContext::var_id() {
  return getRuleContexts<JANTParser::Var_idContext>();
}

JANTParser::Var_idContext* JANTParser::Var_listContext::var_id(size_t i) {
  return getRuleContext<JANTParser::Var_idContext>(i);
}


size_t JANTParser::Var_listContext::getRuleIndex() const {
  return JANTParser::RuleVar_list;
}


antlrcpp::Any JANTParser::Var_listContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<JANTVisitor*>(visitor))
    return parserVisitor->visitVar_list(this);
  else
    return visitor->visitChildren(this);
}

JANTParser::Var_listContext* JANTParser::var_list() {
  Var_listContext *_localctx = _tracker.createInstance<Var_listContext>(_ctx, getState());
  enterRule(_localctx, 18, JANTParser::RuleVar_list);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(112);
    var_id();
    setState(117);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == JANTParser::T__3) {
      setState(113);
      match(JANTParser::T__3);
      setState(114);
      var_id();
      setState(119);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Var_idContext ------------------------------------------------------------------

JANTParser::Var_idContext::Var_idContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* JANTParser::Var_idContext::IDENTIFIER() {
  return getToken(JANTParser::IDENTIFIER, 0);
}


size_t JANTParser::Var_idContext::getRuleIndex() const {
  return JANTParser::RuleVar_id;
}


antlrcpp::Any JANTParser::Var_idContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<JANTVisitor*>(visitor))
    return parserVisitor->visitVar_id(this);
  else
    return visitor->visitChildren(this);
}

JANTParser::Var_idContext* JANTParser::var_id() {
  Var_idContext *_localctx = _tracker.createInstance<Var_idContext>(_ctx, getState());
  enterRule(_localctx, 20, JANTParser::RuleVar_id);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(120);
    match(JANTParser::IDENTIFIER);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Type_idContext ------------------------------------------------------------------

JANTParser::Type_idContext::Type_idContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* JANTParser::Type_idContext::IDENTIFIER() {
  return getToken(JANTParser::IDENTIFIER, 0);
}


size_t JANTParser::Type_idContext::getRuleIndex() const {
  return JANTParser::RuleType_id;
}


antlrcpp::Any JANTParser::Type_idContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<JANTVisitor*>(visitor))
    return parserVisitor->visitType_id(this);
  else
    return visitor->visitChildren(this);
}

JANTParser::Type_idContext* JANTParser::type_id() {
  Type_idContext *_localctx = _tracker.createInstance<Type_idContext>(_ctx, getState());
  enterRule(_localctx, 22, JANTParser::RuleType_id);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(122);
    match(JANTParser::IDENTIFIER);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StmtContext ------------------------------------------------------------------

JANTParser::StmtContext::StmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t JANTParser::StmtContext::getRuleIndex() const {
  return JANTParser::RuleStmt;
}

void JANTParser::StmtContext::copyFrom(StmtContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- WhenStmtContext ------------------------------------------------------------------

JANTParser::Whenall_stmtContext* JANTParser::WhenStmtContext::whenall_stmt() {
  return getRuleContext<JANTParser::Whenall_stmtContext>(0);
}

JANTParser::WhenStmtContext::WhenStmtContext(StmtContext *ctx) { copyFrom(ctx); }


antlrcpp::Any JANTParser::WhenStmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<JANTVisitor*>(visitor))
    return parserVisitor->visitWhenStmt(this);
  else
    return visitor->visitChildren(this);
}
//----------------- PrintTxtStmtContext ------------------------------------------------------------------

JANTParser::PrintTxtContext* JANTParser::PrintTxtStmtContext::printTxt() {
  return getRuleContext<JANTParser::PrintTxtContext>(0);
}

JANTParser::PrintTxtStmtContext::PrintTxtStmtContext(StmtContext *ctx) { copyFrom(ctx); }


antlrcpp::Any JANTParser::PrintTxtStmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<JANTVisitor*>(visitor))
    return parserVisitor->visitPrintTxtStmt(this);
  else
    return visitor->visitChildren(this);
}
//----------------- LoopStmtContext ------------------------------------------------------------------

JANTParser::Loop_stmtContext* JANTParser::LoopStmtContext::loop_stmt() {
  return getRuleContext<JANTParser::Loop_stmtContext>(0);
}

JANTParser::LoopStmtContext::LoopStmtContext(StmtContext *ctx) { copyFrom(ctx); }


antlrcpp::Any JANTParser::LoopStmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<JANTVisitor*>(visitor))
    return parserVisitor->visitLoopStmt(this);
  else
    return visitor->visitChildren(this);
}
//----------------- CompoundStmtContext ------------------------------------------------------------------

JANTParser::Compound_stmtContext* JANTParser::CompoundStmtContext::compound_stmt() {
  return getRuleContext<JANTParser::Compound_stmtContext>(0);
}

JANTParser::CompoundStmtContext::CompoundStmtContext(StmtContext *ctx) { copyFrom(ctx); }


antlrcpp::Any JANTParser::CompoundStmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<JANTVisitor*>(visitor))
    return parserVisitor->visitCompoundStmt(this);
  else
    return visitor->visitChildren(this);
}
//----------------- PrintStrStmtContext ------------------------------------------------------------------

JANTParser::PrintStrContext* JANTParser::PrintStrStmtContext::printStr() {
  return getRuleContext<JANTParser::PrintStrContext>(0);
}

JANTParser::PrintStrStmtContext::PrintStrStmtContext(StmtContext *ctx) { copyFrom(ctx); }


antlrcpp::Any JANTParser::PrintStrStmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<JANTVisitor*>(visitor))
    return parserVisitor->visitPrintStrStmt(this);
  else
    return visitor->visitChildren(this);
}
//----------------- FuncCallStmtContext ------------------------------------------------------------------

JANTParser::FuncCall_stmtContext* JANTParser::FuncCallStmtContext::funcCall_stmt() {
  return getRuleContext<JANTParser::FuncCall_stmtContext>(0);
}

JANTParser::FuncCallStmtContext::FuncCallStmtContext(StmtContext *ctx) { copyFrom(ctx); }


antlrcpp::Any JANTParser::FuncCallStmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<JANTVisitor*>(visitor))
    return parserVisitor->visitFuncCallStmt(this);
  else
    return visitor->visitChildren(this);
}
//----------------- EmptyStmtContext ------------------------------------------------------------------

JANTParser::EmptyStmtContext::EmptyStmtContext(StmtContext *ctx) { copyFrom(ctx); }


antlrcpp::Any JANTParser::EmptyStmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<JANTVisitor*>(visitor))
    return parserVisitor->visitEmptyStmt(this);
  else
    return visitor->visitChildren(this);
}
//----------------- AssignmentStmtContext ------------------------------------------------------------------

JANTParser::Assignment_stmtContext* JANTParser::AssignmentStmtContext::assignment_stmt() {
  return getRuleContext<JANTParser::Assignment_stmtContext>(0);
}

JANTParser::AssignmentStmtContext::AssignmentStmtContext(StmtContext *ctx) { copyFrom(ctx); }


antlrcpp::Any JANTParser::AssignmentStmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<JANTVisitor*>(visitor))
    return parserVisitor->visitAssignmentStmt(this);
  else
    return visitor->visitChildren(this);
}
//----------------- DeclarationContext ------------------------------------------------------------------

JANTParser::DeclarationsContext* JANTParser::DeclarationContext::declarations() {
  return getRuleContext<JANTParser::DeclarationsContext>(0);
}

JANTParser::DeclarationContext::DeclarationContext(StmtContext *ctx) { copyFrom(ctx); }


antlrcpp::Any JANTParser::DeclarationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<JANTVisitor*>(visitor))
    return parserVisitor->visitDeclaration(this);
  else
    return visitor->visitChildren(this);
}
JANTParser::StmtContext* JANTParser::stmt() {
  StmtContext *_localctx = _tracker.createInstance<StmtContext>(_ctx, getState());
  enterRule(_localctx, 24, JANTParser::RuleStmt);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(161);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 12, _ctx)) {
    case 1: {
      _localctx = dynamic_cast<StmtContext *>(_tracker.createInstance<JANTParser::CompoundStmtContext>(_localctx));
      enterOuterAlt(_localctx, 1);
      setState(124);
      compound_stmt();
      break;
    }

    case 2: {
      _localctx = dynamic_cast<StmtContext *>(_tracker.createInstance<JANTParser::AssignmentStmtContext>(_localctx));
      enterOuterAlt(_localctx, 2);
      setState(125);
      assignment_stmt();
      setState(128);
      _errHandler->sync(this);
      switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx)) {
      case 1: {
        break;
      }

      case 2: {
        setState(127);
        match(JANTParser::T__0);
        break;
      }

      }
      break;
    }

    case 3: {
      _localctx = dynamic_cast<StmtContext *>(_tracker.createInstance<JANTParser::LoopStmtContext>(_localctx));
      enterOuterAlt(_localctx, 3);
      setState(130);
      loop_stmt();
      setState(133);
      _errHandler->sync(this);
      switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 6, _ctx)) {
      case 1: {
        break;
      }

      case 2: {
        setState(132);
        match(JANTParser::T__0);
        break;
      }

      }
      break;
    }

    case 4: {
      _localctx = dynamic_cast<StmtContext *>(_tracker.createInstance<JANTParser::WhenStmtContext>(_localctx));
      enterOuterAlt(_localctx, 4);
      setState(135);
      whenall_stmt();
      setState(138);
      _errHandler->sync(this);
      switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 7, _ctx)) {
      case 1: {
        break;
      }

      case 2: {
        setState(137);
        match(JANTParser::T__0);
        break;
      }

      }
      break;
    }

    case 5: {
      _localctx = dynamic_cast<StmtContext *>(_tracker.createInstance<JANTParser::FuncCallStmtContext>(_localctx));
      enterOuterAlt(_localctx, 5);
      setState(140);
      funcCall_stmt();
      setState(143);
      _errHandler->sync(this);
      switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 8, _ctx)) {
      case 1: {
        break;
      }

      case 2: {
        setState(142);
        match(JANTParser::T__0);
        break;
      }

      }
      break;
    }

    case 6: {
      _localctx = dynamic_cast<StmtContext *>(_tracker.createInstance<JANTParser::DeclarationContext>(_localctx));
      enterOuterAlt(_localctx, 6);
      setState(145);
      declarations();
      setState(148);
      _errHandler->sync(this);
      switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 9, _ctx)) {
      case 1: {
        break;
      }

      case 2: {
        setState(147);
        match(JANTParser::T__0);
        break;
      }

      }
      break;
    }

    case 7: {
      _localctx = dynamic_cast<StmtContext *>(_tracker.createInstance<JANTParser::PrintStrStmtContext>(_localctx));
      enterOuterAlt(_localctx, 7);
      setState(150);
      printStr();
      setState(153);
      _errHandler->sync(this);
      switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 10, _ctx)) {
      case 1: {
        break;
      }

      case 2: {
        setState(152);
        match(JANTParser::T__0);
        break;
      }

      }
      break;
    }
